# AI_GATI_Med

./: .env  .gitignore  Asthma: Lifestyle disease.txt  README.md  agents.py  app.py  create_embeddings.py  load_embeddings.py  pyproject.toml  test.py  ui.py
pdf_faiss_index/: index.faiss  index.pkl
