[tool.poetry]
name = "med_assist_ai"
version = "0.1.0"
description = "This project is for AI GATI hackathon. It is meant to be a healthcare ai solutions."
authors = ["Aqsa"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.42.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
