[tool.poetry]
name = "med_assist_ai"
version = "0.1.0"
description = "This project is for AI GATI hackathon. It is meant to be a healthcare ai solutions."
authors = ["Aqsa"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.42.2"
openai = "^1.65.1"
langchain = "^0.3.19"
langchain-core = "^0.3.40"
langchain-community = "^0.3.18"
langchain-openai = "^0.3.7"
pypdf = "^5.3.1"
faiss-cpu = "^1.10.0"
langgraph = "^0.3.11"
streamlit-chat = "^0.1.1"
Flask = "^3.1.0"
flask-cors = "^5.0.1"
gradio = "^5.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
